   * A basic and expert mode for adding repositories is available.
   * obsrepositories:/ source_path can be added easily using 'use project repositories' checkbox.
   * Only `apt-deb` and `rpm-md` are allowed as repo_type. Other values will be replaced by `rpm-md`.
 * Job history: 'source change' rows now link to the diff

API:
 * Kerberos authentication mode
 * api_relative_url_root option was removed

Backend:
 * support showing source files in blame view (works also via links)
 * support project copy with makeoriginolder option

Shipment:
 *

Wanted changes:
===============

 * creating of repositories on branching has changed if repositories of the
   source refer each other. This gets recreated in new project.

 * project copy is not adding the user anymore

 * service dispatcher is used by default now

 * The editing of a user's realname, email adress or password is no longer possible if LDAP mode is activated

 * Unused ldap options in options.yml were dropped:
   - ldap_update_support
   - ldap_object_class
   - ldap_entry_base
   - ldap_sn_attr_required

 * dropping of the project/package tag functionality/api

 * password hashing algorithm was changed to bcrypt (blowfish)

Other changes
=============

 *

Notes for systems using systemd:
================================

OBS is using init scripts, not systemd style .service files. This will stay until
we will switch from SLES 11 to SLES 12 as default production platform.

openSUSE installations may use systemd (instead of sysvinit) and it should work
in general. Not working are usages like

 # rcobssrcserver status

You will only get the systemd status here.

Also stopping services may not kill all processes, which leads to abstract errors
when trying to restart them. We heard also about trashed MySQL databases when using
systemd.

To avoid these problems you need switch directory to avoid the systemd mapper:

 # cd /etc/init.d
 # ./obssrcserver status|stop|start