@@ -51,6 +51,9 @@ Backend:
 Shipment:
  *
 
+Bugfixes:
+ * Deletion of groups with users was not working
+
 Wanted changes:
 ===============
 
